force-app/main/default/objects/Interview_Question__c/fields/Technology__c.field-meta.xml
<CustomField>
    <fullName>Technology__c</fullName>
    <label>Technology</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>